--- a/views/index.erb
+++ b/views/index.erb
@@ -16,11 +16,19 @@
 			<div>
 				<%= p.description %>
 			</div>
+
+			<div>
+				Size: <%= p.size %> cm
+			</div>
+
+			<div>
+				Price: <%= p.price %> rub
+			</div>
 		</div>
 
 	<% end %>
 
 </div>
-
+<br>
 <button class="btn btn-primary" onclick="something()">Click me!</button>
 
