--- a/views/layout.erb
+++ b/views/layout.erb
@@ -59,6 +59,17 @@
 
 	</div>
 
+		<script type="text/javascript">
+		
+		$(function() {
+
+			update_orders_input();
+			update_orders_button();
+
+		});
+		
+		</script>
+
 
 
   </body>
