--- a/views/cart.erb
+++ b/views/cart.erb
@@ -30,3 +30,26 @@
 
     	</tbody>
     </table>
+
+<form action="/place_order" method="POST" role="form">
+
+	<input name="order[orders_input]" type="hidden" value="<%= @orders_input %>">
+
+	<div class="form-group">
+		<label>Name:</label>
+		<input type="text" name="order[name]" class="form-control" placeholder="Your name">
+	</div>
+
+	<div class="form-group">
+		<label>Phone</label>
+		<input type="text" name="order[phone]" class="form-control" placeholder="Your phone">
+	</div>
+
+	<div class="form-group">
+		<label>Delivery Address</label>
+		<textarea type="text" name="order[address]" class="form-control" placeholder="Delivery address"></textarea> 
+	</div>
+
+	<button type="submit" class="btn btn-success btn-lg">Place this order!</button>
+
+</form>
