--- a/views/cart.erb
+++ b/views/cart.erb
@@ -37,7 +37,7 @@
 
 	<div class="form-group">
 		<label>Name:</label>
-		<input type="text" name="order[name]" class="form-control" placeholder="Your name">
+		<input type="text" name="order[name]" class="form-control" placeholder="Your name" value="">
 	</div>
 
 	<div class="form-group">
