--- a/views/cart.erb
+++ b/views/cart.erb
@@ -51,7 +51,7 @@
 	</div>
 
 	<button type="submit" class="btn btn-success btn-lg">Place this order!</button>
-	<button  class="btn btn-danger btn-lg" onclick="alert('aaa');return false">Cancel</button>
+	<button  class="btn btn-danger btn-lg" onclick="return cancel_order(id)">Cancel</button>
 
 
 </form>
