--- a/views/cart.erb
+++ b/views/cart.erb
@@ -1,57 +1,59 @@
 <h2>Your cart</h2>
 
+<div id="cart">
+	
 
+	<table class="table table-striped">
+		<thead>
+			<tr>
+	          	<th>Name</th>
+	          	<th>Price</th>
+	          	<th>Qty</th>
+	        </tr>
+	    </thead>
+	    <tbody>
+	    <% total_price = 0 %>
+	    <% total_qty = 0 %>
+	    <% @items.each do |item| %>
+	    	<tr>
+	          	<td><%= item[0].title %></td>
+	          	<td><%= item[0].price %></td>
+	          	<td><%= item[1] %></td>
+	        </tr>
+	        <% total_price += item[0].price * item[1].to_i %>
+	        <% total_qty += item[1].to_i %>
+	    <% end %>
+	    	<tr>
+				<td></td>
+	          	<td>Total: <%= total_price %> Rub</td>
+	          	<td><%= total_qty %></td>
+	        </tr>
 
-<table class="table table-striped">
-	<thead>
-		<tr>
-          	<th>Name</th>
-          	<th>Price</th>
-          	<th>Qty</th>
-        </tr>
-    </thead>
-    <tbody>
-    <% total_price = 0 %>
-    <% total_qty = 0 %>
-    <% @items.each do |item| %>
-    	<tr>
-          	<td><%= item[0].title %></td>
-          	<td><%= item[0].price %></td>
-          	<td><%= item[1] %></td>
-        </tr>
-        <% total_price += item[0].price * item[1].to_i %>
-        <% total_qty += item[1].to_i %>
-    <% end %>
-    	<tr>
-			<td></td>
-          	<td>Total: <%= total_price %> Rub</td>
-          	<td><%= total_qty %></td>
-        </tr>
+	    	</tbody>
+	    </table>
 
-    	</tbody>
-    </table>
+	<form action="/place_order" method="POST" role="form">
 
-<form action="/place_order" method="POST" role="form">
+		<input name="order[orders_input]" type="hidden" value="<%= @orders_input %>">
 
-	<input name="order[orders_input]" type="hidden" value="<%= @orders_input %>">
+		<div class="form-group">
+			<label>Name:</label>
+			<input type="text" name="order[name]" class="form-control" placeholder="Your name" value="">
+		</div>
 
-	<div class="form-group">
-		<label>Name:</label>
-		<input type="text" name="order[name]" class="form-control" placeholder="Your name" value="">
-	</div>
+		<div class="form-group">
+			<label>Phone</label>
+			<input type="text" name="order[phone]" class="form-control" placeholder="Your phone">
+		</div>
 
-	<div class="form-group">
-		<label>Phone</label>
-		<input type="text" name="order[phone]" class="form-control" placeholder="Your phone">
-	</div>
+		<div class="form-group">
+			<label>Delivery Address</label>
+			<textarea type="text" name="order[address]" class="form-control" placeholder="Delivery address"></textarea> 
+		</div>
 
-	<div class="form-group">
-		<label>Delivery Address</label>
-		<textarea type="text" name="order[address]" class="form-control" placeholder="Delivery address"></textarea> 
-	</div>
+		<button type="submit" class="btn btn-success btn-lg">Place this order!</button>
+		<button  class="btn btn-danger btn-lg" onclick="return cancel_order(id)">Cancel</button>
 
-	<button type="submit" class="btn btn-success btn-lg">Place this order!</button>
-	<button  class="btn btn-danger btn-lg" onclick="return cancel_order(id)">Cancel</button>
+	</form>
 
-
-</form>
+</div>		
